--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -26,7 +26,7 @@ blog:
 
 <div class="main full">
     {{#if products.featured}}
-        {{> components/products/featured products=products.featured columns=theme_settings.homepage_featured_products_column_count}}
+        {{> components/products/featured products=products.featured columns=2}}
     {{/if}}
 
     {{#if products.top_sellers}}
