remove categories from footer to place it into a new file of its own

--- a/templates/components/common/footer.html
+++ b/templates/components/common/footer.html
@@ -44,16 +44,16 @@
                 </ul>
             </article>
 
-            <article class="footer-info-col footer-info-col--small" data-section-type="footer-categories">
-                <h5 class="footer-info-heading">{{lang 'footer.categories'}}</h5>
-                <ul class="footer-info-list">
-                    {{#each categories}}
-                        <li>
-                            <a href="{{url}}">{{name}}</a>
-                        </li>
-                    {{/each}}
-                </ul>
-            </article>
+            <!--<article class="footer-info-col footer-info-col&#45;&#45;small" data-section-type="footer-categories">-->
+                <!--<h5 class="footer-info-heading">{{lang 'footer.categories'}}</h5>-->
+                <!--<ul class="footer-info-list">-->
+                    <!--{{#each categories}}-->
+                        <!--<li>-->
+                            <!--<a href="{{url}}">{{name}}</a>-->
+                        <!--</li>-->
+                    <!--{{/each}}-->
+                <!--</ul>-->
+            <!--</article>-->
 
             {{#and theme_settings.shop_by_brand_show_footer shop_by_brand.length}}
             <article class="footer-info-col footer-info-col--small" data-section-type="footer-brands">
