--- a/templates/components/common/footer.html
+++ b/templates/components/common/footer.html
@@ -42,8 +42,9 @@
                         <a href="{{urls.sitemap}}">{{lang 'sitemap.page_title'}}</a>
                     </li>
                 </ul>
-            </article>
 
+            </article>
+            {{> components/footer/categories}}
             <!--<article class="footer-info-col footer-info-col&#45;&#45;small" data-section-type="footer-categories">-->
                 <!--<h5 class="footer-info-heading">{{lang 'footer.categories'}}</h5>-->
                 <!--<ul class="footer-info-list">-->
