--- a/templates/components/products/product-view.html
+++ b/templates/components/products/product-view.html
@@ -21,6 +21,14 @@
                     <span>{{product.call_for_price}}</span>
                 </p>
             {{/if}}
+
+
+
+            <div id="alex">
+                Loading your IP address...
+            </div>
+
+
             <div class="productView-price">
                 {{#or customer (if theme_settings.restrict_to_login '!==' true)}}
                     {{> components/products/price price=product.price schema_org=schema}}
