--- a/templates/pages/product.html
+++ b/templates/pages/product.html
@@ -35,23 +35,12 @@ product:
 
     </div>
 
-<script>
-
-    $('.alexprod').on('click', function() {
-        console.log('clicked h3')
-    });
-
-    $('document').ready(function () {
-        console.log('document ready')
-    })
-
-
-
-</script>
-
 <div>
 
     <a href="" class="alexprod"><h3>Alex new product details</h3></a>
+    <ul id="acc">
+
+    </ul>
     <!--<a href="#" class="button button&#45;&#45;small card-figcaption-button alexprod" data-event-type="product-click" data-product-id="{{id}}">-->
     <!--<a href="#" class="button button&#45;&#45;small card-figcaption-button alexprod" data-product-id="{{id}}">{{lang 'products.quick_view'}}</a>-->
 </div>
